ExpressoesParser.py
# Generated from Expressoes.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExpressoesParser ( Parser ):

    grammarFileName = "Expressoes.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'TITLE'", "'DESCRIPTION'", "'ITEM'", 
                     "'TEXT'", "'PARAGRAPH_TEXT'", "'MULTIPLE_CHOICE'", 
                     "'SECTION_HEADER'", "'SHOW'", "'EXPORT'", "'VALUES'", 
                     "','", "';'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "TITLE", "DESCRIPTION", "ITEM", "TEXT", 
                      "PARAGRAPH_TEXT", "MULTIPLE_CHOICE", "SECTION_HEADER", 
                      "SHOW", "EXPORT", "VALUES", "COMMA", "PV", "LPAR", 
                      "RPAR", "ID", "NUM", "STRING", "WS" ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_titleStmt = 2
    RULE_descriptionStmt = 3
    RULE_insertItemTextStmt = 4
    RULE_insertItemParagraphTextStmt = 5
    RULE_insertItemMultipleChoicetStmt = 6
    RULE_insertItemSectionHeadertStmt = 7
    RULE_showStmt = 8
    RULE_exportStmt = 9
    RULE_itemKeys = 10
    RULE_values = 11
    RULE_value = 12

    ruleNames =  [ "prog", "stmt", "titleStmt", "descriptionStmt", "insertItemTextStmt", 
                   "insertItemParagraphTextStmt", "insertItemMultipleChoicetStmt", 
                   "insertItemSectionHeadertStmt", "showStmt", "exportStmt", 
                   "itemKeys", "values", "value" ]

    EOF = Token.EOF
    TITLE=1
    DESCRIPTION=2
    ITEM=3
    TEXT=4
    PARAGRAPH_TEXT=5
    MULTIPLE_CHOICE=6
    SECTION_HEADER=7
    SHOW=8
    EXPORT=9
    VALUES=10
    COMMA=11
    PV=12
    LPAR=13
    RPAR=14
    ID=15
    NUM=16
    STRING=17
    WS=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpressoesParser.StmtContext)
            else:
                return self.getTypedRuleContext(ExpressoesParser.StmtContext,i)


        def getRuleIndex(self):
            return ExpressoesParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = ExpressoesParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 26
                self.stmt()
                self.state = 29 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 782) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def titleStmt(self):
            return self.getTypedRuleContext(ExpressoesParser.TitleStmtContext,0)


        def descriptionStmt(self):
            return self.getTypedRuleContext(ExpressoesParser.DescriptionStmtContext,0)


        def insertItemTextStmt(self):
            return self.getTypedRuleContext(ExpressoesParser.InsertItemTextStmtContext,0)


        def insertItemParagraphTextStmt(self):
            return self.getTypedRuleContext(ExpressoesParser.InsertItemParagraphTextStmtContext,0)


        def insertItemMultipleChoicetStmt(self):
            return self.getTypedRuleContext(ExpressoesParser.InsertItemMultipleChoicetStmtContext,0)


        def insertItemSectionHeadertStmt(self):
            return self.getTypedRuleContext(ExpressoesParser.InsertItemSectionHeadertStmtContext,0)


        def showStmt(self):
            return self.getTypedRuleContext(ExpressoesParser.ShowStmtContext,0)


        def exportStmt(self):
            return self.getTypedRuleContext(ExpressoesParser.ExportStmtContext,0)


        def getRuleIndex(self):
            return ExpressoesParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = ExpressoesParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 39
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.titleStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 32
                self.descriptionStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 33
                self.insertItemTextStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 34
                self.insertItemParagraphTextStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 35
                self.insertItemMultipleChoicetStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 36
                self.insertItemSectionHeadertStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 37
                self.showStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 38
                self.exportStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TitleStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TITLE(self):
            return self.getToken(ExpressoesParser.TITLE, 0)

        def value(self):
            return self.getTypedRuleContext(ExpressoesParser.ValueContext,0)


        def PV(self):
            return self.getToken(ExpressoesParser.PV, 0)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_titleStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTitleStmt" ):
                listener.enterTitleStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTitleStmt" ):
                listener.exitTitleStmt(self)




    def titleStmt(self):

        localctx = ExpressoesParser.TitleStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_titleStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(ExpressoesParser.TITLE)
            self.state = 42
            self.value()
            self.state = 43
            self.match(ExpressoesParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescriptionStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DESCRIPTION(self):
            return self.getToken(ExpressoesParser.DESCRIPTION, 0)

        def value(self):
            return self.getTypedRuleContext(ExpressoesParser.ValueContext,0)


        def PV(self):
            return self.getToken(ExpressoesParser.PV, 0)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_descriptionStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDescriptionStmt" ):
                listener.enterDescriptionStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDescriptionStmt" ):
                listener.exitDescriptionStmt(self)




    def descriptionStmt(self):

        localctx = ExpressoesParser.DescriptionStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_descriptionStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(ExpressoesParser.DESCRIPTION)
            self.state = 46
            self.value()
            self.state = 47
            self.match(ExpressoesParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertItemTextStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ITEM(self):
            return self.getToken(ExpressoesParser.ITEM, 0)

        def TEXT(self):
            return self.getToken(ExpressoesParser.TEXT, 0)

        def LPAR(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressoesParser.LPAR)
            else:
                return self.getToken(ExpressoesParser.LPAR, i)

        def itemKeys(self):
            return self.getTypedRuleContext(ExpressoesParser.ItemKeysContext,0)


        def RPAR(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressoesParser.RPAR)
            else:
                return self.getToken(ExpressoesParser.RPAR, i)

        def VALUES(self):
            return self.getToken(ExpressoesParser.VALUES, 0)

        def values(self):
            return self.getTypedRuleContext(ExpressoesParser.ValuesContext,0)


        def PV(self):
            return self.getToken(ExpressoesParser.PV, 0)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_insertItemTextStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsertItemTextStmt" ):
                listener.enterInsertItemTextStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsertItemTextStmt" ):
                listener.exitInsertItemTextStmt(self)




    def insertItemTextStmt(self):

        localctx = ExpressoesParser.InsertItemTextStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_insertItemTextStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(ExpressoesParser.ITEM)
            self.state = 50
            self.match(ExpressoesParser.TEXT)
            self.state = 51
            self.match(ExpressoesParser.LPAR)
            self.state = 52
            self.itemKeys()
            self.state = 53
            self.match(ExpressoesParser.RPAR)
            self.state = 54
            self.match(ExpressoesParser.VALUES)
            self.state = 55
            self.match(ExpressoesParser.LPAR)
            self.state = 56
            self.values()
            self.state = 57
            self.match(ExpressoesParser.RPAR)
            self.state = 58
            self.match(ExpressoesParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertItemParagraphTextStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ITEM(self):
            return self.getToken(ExpressoesParser.ITEM, 0)

        def PARAGRAPH_TEXT(self):
            return self.getToken(ExpressoesParser.PARAGRAPH_TEXT, 0)

        def LPAR(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressoesParser.LPAR)
            else:
                return self.getToken(ExpressoesParser.LPAR, i)

        def itemKeys(self):
            return self.getTypedRuleContext(ExpressoesParser.ItemKeysContext,0)


        def RPAR(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressoesParser.RPAR)
            else:
                return self.getToken(ExpressoesParser.RPAR, i)

        def VALUES(self):
            return self.getToken(ExpressoesParser.VALUES, 0)

        def values(self):
            return self.getTypedRuleContext(ExpressoesParser.ValuesContext,0)


        def PV(self):
            return self.getToken(ExpressoesParser.PV, 0)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_insertItemParagraphTextStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsertItemParagraphTextStmt" ):
                listener.enterInsertItemParagraphTextStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsertItemParagraphTextStmt" ):
                listener.exitInsertItemParagraphTextStmt(self)




    def insertItemParagraphTextStmt(self):

        localctx = ExpressoesParser.InsertItemParagraphTextStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_insertItemParagraphTextStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(ExpressoesParser.ITEM)
            self.state = 61
            self.match(ExpressoesParser.PARAGRAPH_TEXT)
            self.state = 62
            self.match(ExpressoesParser.LPAR)
            self.state = 63
            self.itemKeys()
            self.state = 64
            self.match(ExpressoesParser.RPAR)
            self.state = 65
            self.match(ExpressoesParser.VALUES)
            self.state = 66
            self.match(ExpressoesParser.LPAR)
            self.state = 67
            self.values()
            self.state = 68
            self.match(ExpressoesParser.RPAR)
            self.state = 69
            self.match(ExpressoesParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertItemMultipleChoicetStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ITEM(self):
            return self.getToken(ExpressoesParser.ITEM, 0)

        def MULTIPLE_CHOICE(self):
            return self.getToken(ExpressoesParser.MULTIPLE_CHOICE, 0)

        def LPAR(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressoesParser.LPAR)
            else:
                return self.getToken(ExpressoesParser.LPAR, i)

        def itemKeys(self):
            return self.getTypedRuleContext(ExpressoesParser.ItemKeysContext,0)


        def RPAR(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressoesParser.RPAR)
            else:
                return self.getToken(ExpressoesParser.RPAR, i)

        def VALUES(self):
            return self.getToken(ExpressoesParser.VALUES, 0)

        def values(self):
            return self.getTypedRuleContext(ExpressoesParser.ValuesContext,0)


        def PV(self):
            return self.getToken(ExpressoesParser.PV, 0)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_insertItemMultipleChoicetStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsertItemMultipleChoicetStmt" ):
                listener.enterInsertItemMultipleChoicetStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsertItemMultipleChoicetStmt" ):
                listener.exitInsertItemMultipleChoicetStmt(self)




    def insertItemMultipleChoicetStmt(self):

        localctx = ExpressoesParser.InsertItemMultipleChoicetStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_insertItemMultipleChoicetStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(ExpressoesParser.ITEM)
            self.state = 72
            self.match(ExpressoesParser.MULTIPLE_CHOICE)
            self.state = 73
            self.match(ExpressoesParser.LPAR)
            self.state = 74
            self.itemKeys()
            self.state = 75
            self.match(ExpressoesParser.RPAR)
            self.state = 76
            self.match(ExpressoesParser.VALUES)
            self.state = 77
            self.match(ExpressoesParser.LPAR)
            self.state = 78
            self.values()
            self.state = 79
            self.match(ExpressoesParser.RPAR)
            self.state = 80
            self.match(ExpressoesParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertItemSectionHeadertStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ITEM(self):
            return self.getToken(ExpressoesParser.ITEM, 0)

        def SECTION_HEADER(self):
            return self.getToken(ExpressoesParser.SECTION_HEADER, 0)

        def LPAR(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressoesParser.LPAR)
            else:
                return self.getToken(ExpressoesParser.LPAR, i)

        def itemKeys(self):
            return self.getTypedRuleContext(ExpressoesParser.ItemKeysContext,0)


        def RPAR(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressoesParser.RPAR)
            else:
                return self.getToken(ExpressoesParser.RPAR, i)

        def VALUES(self):
            return self.getToken(ExpressoesParser.VALUES, 0)

        def values(self):
            return self.getTypedRuleContext(ExpressoesParser.ValuesContext,0)


        def PV(self):
            return self.getToken(ExpressoesParser.PV, 0)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_insertItemSectionHeadertStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsertItemSectionHeadertStmt" ):
                listener.enterInsertItemSectionHeadertStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsertItemSectionHeadertStmt" ):
                listener.exitInsertItemSectionHeadertStmt(self)




    def insertItemSectionHeadertStmt(self):

        localctx = ExpressoesParser.InsertItemSectionHeadertStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_insertItemSectionHeadertStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(ExpressoesParser.ITEM)
            self.state = 83
            self.match(ExpressoesParser.SECTION_HEADER)
            self.state = 84
            self.match(ExpressoesParser.LPAR)
            self.state = 85
            self.itemKeys()
            self.state = 86
            self.match(ExpressoesParser.RPAR)
            self.state = 87
            self.match(ExpressoesParser.VALUES)
            self.state = 88
            self.match(ExpressoesParser.LPAR)
            self.state = 89
            self.values()
            self.state = 90
            self.match(ExpressoesParser.RPAR)
            self.state = 91
            self.match(ExpressoesParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHOW(self):
            return self.getToken(ExpressoesParser.SHOW, 0)

        def PV(self):
            return self.getToken(ExpressoesParser.PV, 0)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_showStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShowStmt" ):
                listener.enterShowStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShowStmt" ):
                listener.exitShowStmt(self)




    def showStmt(self):

        localctx = ExpressoesParser.ShowStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_showStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(ExpressoesParser.SHOW)
            self.state = 94
            self.match(ExpressoesParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExportStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXPORT(self):
            return self.getToken(ExpressoesParser.EXPORT, 0)

        def PV(self):
            return self.getToken(ExpressoesParser.PV, 0)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_exportStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExportStmt" ):
                listener.enterExportStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExportStmt" ):
                listener.exitExportStmt(self)




    def exportStmt(self):

        localctx = ExpressoesParser.ExportStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_exportStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(ExpressoesParser.EXPORT)
            self.state = 97
            self.match(ExpressoesParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemKeysContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressoesParser.ID)
            else:
                return self.getToken(ExpressoesParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressoesParser.COMMA)
            else:
                return self.getToken(ExpressoesParser.COMMA, i)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_itemKeys

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItemKeys" ):
                listener.enterItemKeys(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItemKeys" ):
                listener.exitItemKeys(self)




    def itemKeys(self):

        localctx = ExpressoesParser.ItemKeysContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_itemKeys)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(ExpressoesParser.ID)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11:
                self.state = 100
                self.match(ExpressoesParser.COMMA)
                self.state = 101
                self.match(ExpressoesParser.ID)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValuesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpressoesParser.ValueContext)
            else:
                return self.getTypedRuleContext(ExpressoesParser.ValueContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressoesParser.COMMA)
            else:
                return self.getToken(ExpressoesParser.COMMA, i)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_values

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValues" ):
                listener.enterValues(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValues" ):
                listener.exitValues(self)




    def values(self):

        localctx = ExpressoesParser.ValuesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_values)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.value()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11:
                self.state = 108
                self.match(ExpressoesParser.COMMA)
                self.state = 109
                self.value()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(ExpressoesParser.NUM, 0)

        def ID(self):
            return self.getToken(ExpressoesParser.ID, 0)

        def STRING(self):
            return self.getToken(ExpressoesParser.STRING, 0)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = ExpressoesParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 229376) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





